# AQUA_project

./: .gitattributes  .gitignore  AQUA_GPT.py  AQUA_class.py  AQUA_general.py  AQUA_testing.py  AQUAmeetBrian.py  GPU_testing.ipynb  NumericalMethods.py  README.md  TestAQUA.py  aqua_environment.yml  autapse_testing.ipynb  batchAQUA.py  batchAQUA_GPU.py  batchAQUA_GPU2.0.py  batchAQUA_general.py  batch_sim_testing.ipynb  bifurcation_inhib.ipynb  bifurcation_sim.py  chaos_inhib_autapse.ipynb  general_model_testing.ipynb  optimization.ipynb  plotting_functions.py  poster_figures.ipynb  profile_AQUA.ipynb  stimulus.py  surface_plots.py  surface_plots_testing.ipynb  test_AQUA.py  test_utils.ipynb  utils.py
AQUA_matlab/: InitiateBursting.m  InitiateBursting2.m  InitiatePA.m  RunAQUA.m  RunAQUA2.m  aqua.m  aqua2.m  delay_testing.m
AQUA_package/: pyproject.toml
AQUA_package/AQUA/: AQUA_general.py  batchAQUA_general.py  stimulus.py  test_AQUA.py  utils.py
AQUA_package/AQUA.egg-info/: PKG-INFO  SOURCES.txt
AQUA_package/aqua/: AQUA_general.py  batchAQUA_general.py  plotting_functions.py  stimulus.py  test_AQUA.py  utils.py
AQUA_package/aqua.egg-info/: PKG-INFO  SOURCES.txt
AQUA_python/: AQUA.py  AQUA2.py  AQUA_neurons.py  InitiateBursting.py  initiateBursting2.py  initiatePA.py  runAQUA.py  runAQUA2.py
DYC_workshop/: DYC_workshop.py  cf_course.py  cli_course.py  example4.py  example5.py  student_scores.py  test_config.ini
Guo et al 2016/: #README
Hindmarsh-Rose neuron/: HR.ipynb  Hindmarsh_Rose_class.py
Research template/: CF.py  example_config.ini  functions.py  (+2 more)
(+184 files in other folders)
